# sf-desktop-notifications

./: .gitreview  CHANGELOG  README.md  setup.cfg  setup.py  test-requirements.txt  tox.ini
SFDesktopNotifications/: sf_desktop_notifications.py
SFDesktopNotifications/tests/: test_sfdesktopnotifications.py
