[metadata]
name = SF_desktop_notifications
summary = GTK-based desktop notifier for specific events published on a SF-like firehose
description-file = README.md
author = Matthieu Huin
author-email = softwarefactory-dev@redhat.com
home-page = http://softwarefactory-project.io
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Users
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages = SFDesktopNotifications

[entry_points]
console_scripts =
    SFDesktopNotifier = SFDesktopNotifications.sf_desktop_notifications:main
